--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.profiles.include=common, local
 
 spring.profiles.active=local
 server.max-http-header-size=10000000
+
+application.jwt.secretKey=THIS_IS_THE_SUPER_DUPER_SECRET_KEY
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=7
