--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-spring,profiles=local
-spring.profiles.include=common, local
-
-spring.profiles.active=local
+spring.profiles.active=common,local
 server.max-http-header-size=10000000
 
 application.jwt.secretKey=THIS_IS_THE_SUPER_DUPER_SECRET_KEY
