--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.boot.maven.plugin.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>2.0.16</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
