--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- PostgreSQL driver -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
         <!-- For Apache UriBuilder -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
