properties: Use heroku app config
Signed-off-by: Diep Quynh <remilia.1505@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=common,local
+spring.profiles.active=common,heroku
 server.max-http-header-size=10000000
 
 application.jwt.secretKey=THIS_IS_THE_SUPER_DUPER_SECRET_KEY
