jwt: Set custom login URL
Signed-off-by: Diep Quynh <remilia.1505@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.max-http-header-size=10000000
 application.jwt.secretKey=THIS_IS_THE_SUPER_DUPER_SECRET_KEY
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=7
+application.jwt.filterUrl=/api/v1/users/login
