auth: Implement Google OAuth2 login
The following functions were implemented in the backend:
- Browser OAuth2 authentication
- Token-based authentication (which returns a JWT token after
  the user has successfully logged in using a verified ID token)

Signed-off-by: Diep Quynh <remilia.1505@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -71,12 +71,6 @@
 
         <!-- JSON deps start-->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>28.1-jre</version>
-        </dependency>
-
-        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.10.7</version>
@@ -101,6 +95,19 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
+        </dependency>
+
+        <!-- OAuth2 client -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
+        <!-- Google API client library -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.33.2</version>
         </dependency>
     </dependencies>
 
