--- a/src/main/resources/application-common.yml
+++ b/src/main/resources/application-common.yml
@@ -1,3 +1,13 @@
 spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            clientId:
+            clientSecret:
+            scope:
+              - email
+              - profile
   application:
     name: piemon
